<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button

        android:id="@+id/scan"
        android:text="@string/scan"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/settings"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_below="@+id/scan"
        android:layout_alignLeft="@+id/scan"
        android:layout_alignStart="@+id/scan"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/exit"
        android:text="@string/ext"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_below="@+id/view"
        android:layout_alignLeft="@+id/scan"
        android:layout_alignStart="@+id/scan"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/view"
        android:text="@string/looking"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_below="@+id/settings"
        android:layout_alignLeft="@+id/settings"
        android:layout_alignStart="@+id/settings"
        android:layout_marginTop="30dp" />


</RelativeLayout>
